# ckanext-datacity

./: .gitignore  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: deploy.yml
.tx/: config
ckanext/datacity/: constants.py  helpers.py  plugin.py  scheming-app.json  scheming-dataset.json  scheming-group-automation.json  scheming-group-settings.json  scheming-group.json  scheming-organization.json
ckanext/datacity/assets/: webassets.yml
ckanext/datacity/assets/css/: datacity-theme.css
ckanext/datacity/fanstatic/: datacity-theme.css
ckanext/datacity/templates/: base.html  footer.html  header.html
ckanext/datacity/templates/ckanext_pages/: page.html
ckanext/datacity/templates/emails/: invite_user.txt  reset_password.txt
ckanext/datacity/templates/group/snippets/: group_item.html  helper.html  info.html
ckanext/datacity/templates/home/: about.html  index.html  layout-datacity.html
ckanext/datacity/templates/home/snippets/: datasets.html  groups.html  search.html  search_box.html
ckanext/datacity/templates/organization/: index.html
ckanext/datacity/templates/organization/snippets/: helper.html  organization_item.html
ckanext/datacity/templates/package/: base.html  group_list.html  search.html
ckanext/datacity/templates/package/snippets/: info.html
ckanext/datacity/templates/scheming/form_snippets/: footer_links_markdown.html  footer_links_markdown_with_html.html  markdown.html  organization.html  text.html
ckanext/datacity/templates/scheming/package/snippets/: additional_info.html
ckanext/datacity/templates/snippets/: activity_item.html  facet_list.html  header_language_links.html  header_navbar.html  language_selector.html  organization.html  package_item.html  search_form.html
